// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse >block bare 1`] = `
BlockValue {
  "blockStyle": ">",
  "range": Range {
    "end": 34,
    "start": 0,
  },
  "raw": "      #multiline
  
      	block",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 34,
    "start": 2,
  },
}
`;

exports[`parse >block complex mapping key 1`] = `
BlockValue {
  "blockStyle": ">",
  "range": Range {
    "end": 39,
    "start": 4,
  },
  "raw": "      #multiline
  
      	block
",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 39,
    "start": 6,
  },
}
`;

exports[`parse >block flow seq value 1`] = `
BlockValue {
  "blockStyle": ">",
  "range": Range {
    "end": 39,
    "start": 4,
  },
  "raw": "      #multiline
  
      	block
",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 39,
    "start": 6,
  },
}
`;

exports[`parse >block indented block 1`] = `
BlockValue {
  "blockStyle": ">",
  "range": Range {
    "end": 41,
    "start": 6,
  },
  "raw": "      #multiline
  
      	block
",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 41,
    "start": 8,
  },
}
`;

exports[`parse >block literal with header 1`] = `
BlockValue {
  "blockStyle": "|+2",
  "range": Range {
    "end": 40,
    "start": 3,
  },
  "raw": "      #multiline
  
      	block
",
  "type": "BLOCK_LITERAL",
  "valueRange": Range {
    "end": 40,
    "start": 7,
  },
}
`;

exports[`parse >block newline before & after 1`] = `
BlockValue {
  "blockStyle": ">",
  "range": Range {
    "end": 36,
    "start": 1,
  },
  "raw": "      #multiline
  
      	block
",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 36,
    "start": 3,
  },
}
`;

exports[`parse >block seq value 1`] = `
BlockValue {
  "blockStyle": ">",
  "range": Range {
    "end": 37,
    "start": 2,
  },
  "raw": "      #multiline
  
      	block
",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 37,
    "start": 4,
  },
}
`;

exports[`parse >block with comment 1`] = `
BlockValue {
  "blockStyle": ">",
  "commentRange": Range {
    "end": 21,
    "start": 6,
  },
  "range": Range {
    "end": 55,
    "start": 3,
  },
  "raw": "      #multiline
  
      	block
",
  "rawComment": "comment # here!",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 55,
    "start": 22,
  },
}
`;

exports[`parse >block with props 1`] = `
BlockValue {
  "anchor": "anchor",
  "blockStyle": ">",
  "range": Range {
    "end": 51,
    "start": 2,
  },
  "raw": "      #multiline
  
      	block
",
  "tag": "tag!",
  "type": "BLOCK_FOLDED",
  "valueRange": Range {
    "end": 51,
    "start": 18,
  },
}
`;
